Bug 359738 - Crash while navigating
Summary: Crash while navigating
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 15.12.1
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: drkonqi
: 361535 363982 386712 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-02-24 03:10 UTC by Aleix Pol
Modified: 2023-05-19 18:02 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.04.0
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (13.04 KB, text/plain)
2023-05-19 18:02 UTC, vvs170
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2016-02-24 03:10:34 UTC
Application: dolphin (15.12.1)
 (Compiled from sources)
Qt Version: 5.6.0
Operating System: Linux 4.4.1-2-ARCH x86_64
Distribution: "Arch Linux"

-- Information about the crash:
- What I was doing when the application crashed:
I had a split view with a local folder and a remote one. Eventually it crashed when trying to drop a file from one another.

-- Backtrace:
Application: Dolphin (dolphin), signal: Aborted
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fdb179af840 (LWP 32305))]

Thread 4 (Thread 0x7fdb14bd8700 (LWP 32306)):
#0  0x00007fdb2443ac3d in poll () from /usr/lib/libc.so.6
#1  0x00007fdb20698ae2 in ?? () from /usr/lib/libxcb.so.1
#2  0x00007fdb2069a757 in xcb_wait_for_event () from /usr/lib/libxcb.so.1
#3  0x00007fdb16b339b9 in QXcbEventReader::run (this=0x1e96e60) at /home/kde-devel/frameworks/qt5/qtbase/src/plugins/platforms/xcb/qxcbconnection.cpp:1313
#4  0x00007fdb25049219 in QThreadPrivate::start (arg=0x1e96e60) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/thread/qthread_unix.cpp:340
#5  0x00007fdb21ba0424 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007fdb24443cbd in clone () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7fdb0f904700 (LWP 32307)):
#0  0x00007fdb2443ac3d in poll () from /usr/lib/libc.so.6
#1  0x00007fdb1cdeafbc in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007fdb1cdeb0cc in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007fdb2525d49b in QEventDispatcherGlib::processEvents (this=0x7fdb080008c0, flags=...) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:419
#4  0x00007fdb252092aa in QEventLoop::exec (this=this@entry=0x7fdb0f903d60, flags=..., flags@entry=...) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qeventloop.cpp:204
#5  0x00007fdb2504466c in QThread::exec (this=this@entry=0x7fdb254daea0 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/thread/qthread.cpp:503
#6  0x00007fdb2546b3b5 in QDBusConnectionManager::run (this=0x7fdb254daea0 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at /home/kde-devel/frameworks/qt5/qtbase/src/dbus/qdbusconnection.cpp:181
#7  0x00007fdb25049219 in QThreadPrivate::start (arg=0x7fdb254daea0 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/thread/qthread_unix.cpp:340
#8  0x00007fdb21ba0424 in start_thread () from /usr/lib/libpthread.so.0
#9  0x00007fdb24443cbd in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7fdb07fff700 (LWP 32308)):
#0  0x00007fdb1ce2f5f9 in g_mutex_lock () from /usr/lib/libglib-2.0.so.0
#1  0x00007fdb1cdea559 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#2  0x00007fdb1cdeaeeb in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007fdb1cdeb0cc in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0x00007fdb2525d49b in QEventDispatcherGlib::processEvents (this=0x7fdb000008c0, flags=...) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:419
#5  0x00007fdb252092aa in QEventLoop::exec (this=this@entry=0x7fdb07ffed90, flags=..., flags@entry=...) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qeventloop.cpp:204
#6  0x00007fdb2504466c in QThread::exec (this=<optimized out>) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/thread/qthread.cpp:503
#7  0x00007fdb25049219 in QThreadPrivate::start (arg=0x2320d70) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/thread/qthread_unix.cpp:340
#8  0x00007fdb21ba0424 in start_thread () from /usr/lib/libpthread.so.0
#9  0x00007fdb24443cbd in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7fdb179af840 (LWP 32305)):
[KCrash Handler]
#6  0x00007fdb2438f2a8 in raise () from /usr/lib/libc.so.6
#7  0x00007fdb2439072a in abort () from /usr/lib/libc.so.6
#8  0x00007fdb25031c9e in qt_message_fatal (context=..., message=<synthetic pointer>) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/global/qlogging.cpp:1610
#9  QMessageLogger::fatal (this=this@entry=0x7ffe5aaef1d0, msg=msg@entry=0x7fdb252c7eb0 "ASSERT failure in %s: \"%s\", file %s, line %d") at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/global/qlogging.cpp:784
#10 0x00007fdb2502d521 in qt_assert_x (where=<optimized out>, what=<optimized out>, file=<optimized out>, line=<optimized out>) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/global/qglobal.cpp:3002
#11 0x00007fdb2ba8ef83 in QVector<QAccessibleInterface*>::at (this=0x25309b8, i=1725) at /home/kde-devel/kde5/include/QtCore/qvector.h:419
#12 0x00007fdb2ba8e966 in KItemListViewAccessible::cell (this=0x25309a0, index=1725) at /home/kde-devel/frameworks/dolphin/src/kitemviews/kitemlistviewaccessible.cpp:79
#13 0x00007fdb2ba8daab in KItemListViewAccessible::child (this=0x25309a0, index=1725) at /home/kde-devel/frameworks/dolphin/src/kitemviews/kitemlistviewaccessible.cpp:262
#14 0x00007fdb25a4f27b in QAccessibleEvent::accessibleInterface (this=0x7ffe5aaef3c0) at /home/kde-devel/frameworks/qt5/qtbase/src/gui/accessible/qaccessible.cpp:1765
#15 0x00007fdb25a4f65d in QAccessible::updateAccessibility (event=0x7ffe5aaef3c0) at /home/kde-devel/frameworks/qt5/qtbase/src/gui/accessible/qaccessible.cpp:855
#16 0x00007fdb2ba7f7a9 in KItemListView::slotCurrentChanged (this=0x2323090, current=1725, previous=1723) at /home/kde-devel/frameworks/dolphin/src/kitemviews/kitemlistview.cpp:1354
#17 0x00007fdb2ba8a29e in QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1>, QtPrivate::List<int, int>, void, void (KItemListView::*)(int, int)>::call (f=&virtual table offset 592, o=0x2323090, arg=0x7ffe5aaef650) at /home/kde-devel/kde5/include/QtCore/qobjectdefs_impl.h:501
#18 0x00007fdb2ba8a200 in QtPrivate::FunctionPointer<void (KItemListView::*)(int, int)>::call<QtPrivate::List<int, int>, void> (f=&virtual table offset 592, o=0x2323090, arg=0x7ffe5aaef650) at /home/kde-devel/kde5/include/QtCore/qobjectdefs_impl.h:520
#19 0x00007fdb2ba8a136 in QtPrivate::QSlotObject<void (KItemListView::*)(int, int), QtPrivate::List<int, int>, void>::impl (which=1, this_=0x2326e00, r=0x2323090, a=0x7ffe5aaef650, ret=0x0) at /home/kde-devel/kde5/include/QtCore/qobject_impl.h:143
#20 0x00007fdb25235cce in QtPrivate::QSlotObjectBase::call (a=0x7ffe5aaef650, r=0x2323090, this=<optimized out>) at ../../include/QtCore/../../../../frameworks/qt5/qtbase/src/corelib/kernel/qobject_impl.h:124
#21 QMetaObject::activate (sender=0x23261a0, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qobject.cpp:3715
#22 0x00007fdb2bb024f8 in KItemListSelectionManager::currentChanged (this=0x23261a0, _t1=1725, _t2=1723) at src/moc_kitemlistselectionmanager.cpp:139
#23 0x00007fdb2ba74cd6 in KItemListSelectionManager::setCurrentItem (this=0x23261a0, current=1725) at /home/kde-devel/frameworks/dolphin/src/kitemviews/kitemlistselectionmanager.cpp:54
#24 0x00007fdb2ba6e934 in KItemListController::mouseMoveEvent (this=0x23268e0, event=0x7ffe5aaf0390, transform=...) at /home/kde-devel/frameworks/dolphin/src/kitemviews/kitemlistcontroller.cpp:697
#25 0x00007fdb2ba702d7 in KItemListController::processEvent (this=0x23268e0, event=0x7ffe5aaf0390, transform=...) at /home/kde-devel/frameworks/dolphin/src/kitemviews/kitemlistcontroller.cpp:1010
#26 0x00007fdb2ba7cc2d in KItemListView::event (this=0x2323090, event=0x7ffe5aaf0390) at /home/kde-devel/frameworks/dolphin/src/kitemviews/kitemlistview.cpp:907
#27 0x00007fdb260a2f4c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x2323090, e=0x7ffe5aaf0390) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3714
#28 0x00007fdb260a7e06 in QApplication::notify (this=0x7ffe5aaf15e0, receiver=0x2323090, e=0x7ffe5aaf0390) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3495
#29 0x00007fdb2520afa8 in QCoreApplication::notifyInternal2 (receiver=0x2323090, event=0x7ffe5aaf0390) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1015
#30 0x00007fdb260a04ae in QCoreApplication::sendSpontaneousEvent (event=event@entry=0x7ffe5aaf0390, receiver=<optimized out>) at ../../include/QtCore/../../../../frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.h:230
#31 qt_sendSpontaneousEvent (receiver=<optimized out>, event=event@entry=0x7ffe5aaf0390) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:4161
#32 0x00007fdb26379703 in QGraphicsScenePrivate::sendEvent (this=<optimized out>, item=0x23230a0, event=0x7ffe5aaf0390) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/graphicsview/qgraphicsscene.cpp:1236
#33 0x00007fdb2637a0d1 in QGraphicsScenePrivate::sendMouseEvent (this=0x232fe80, mouseEvent=0x7ffe5aaf0390) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/graphicsview/qgraphicsscene.cpp:1314
#34 0x00007fdb2637f106 in QGraphicsScene::mouseMoveEvent (this=<optimized out>, mouseEvent=0x7ffe5aaf0390) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/graphicsview/qgraphicsscene.cpp:4048
#35 0x00007fdb2638a74c in QGraphicsScene::event (this=0x232fd80, event=0x7ffe5aaf0390) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/graphicsview/qgraphicsscene.cpp:3384
#36 0x00007fdb260a2f4c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x232fd80, e=0x7ffe5aaf0390) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3714
#37 0x00007fdb260a7e06 in QApplication::notify (this=0x7ffe5aaf15e0, receiver=0x232fd80, e=0x7ffe5aaf0390) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3495
#38 0x00007fdb2520afa8 in QCoreApplication::notifyInternal2 (receiver=0x232fd80, event=0x7ffe5aaf0390) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1015
#39 0x00007fdb260a04ae in QCoreApplication::sendSpontaneousEvent (event=event@entry=0x7ffe5aaf0390, receiver=<optimized out>) at ../../include/QtCore/../../../../frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.h:230
#40 qt_sendSpontaneousEvent (receiver=<optimized out>, event=event@entry=0x7ffe5aaf0390) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:4161
#41 0x00007fdb263a1fdf in QGraphicsViewPrivate::mouseMoveEventHandler (this=0x2330550, event=0x7ffe5aaf08d0) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/graphicsview/qgraphicsview.cpp:661
#42 0x00007fdb260e45a8 in QWidget::event (this=this@entry=0x232fe40, event=event@entry=0x7ffe5aaf08d0) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qwidget.cpp:9109
#43 0x00007fdb261bb29e in QFrame::event (this=0x232fe40, e=0x7ffe5aaf08d0) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/widgets/qframe.cpp:544
#44 0x00007fdb263a4c1b in QGraphicsView::viewportEvent (this=0x232fe40, event=0x7ffe5aaf08d0) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/graphicsview/qgraphicsview.cpp:2850
#45 0x00007fdb2520ad42 in QCoreApplicationPrivate::sendThroughObjectEventFilters (receiver=receiver@entry=0x2351b20, event=event@entry=0x7ffe5aaf08d0) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1126
#46 0x00007fdb260a2f25 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x2351b20, e=0x7ffe5aaf08d0) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3710
#47 0x00007fdb260a8991 in QApplication::notify (this=<optimized out>, receiver=0x2351b20, e=0x7ffe5aaf08d0) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3272
#48 0x00007fdb2520afa8 in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x2351b20, event=event@entry=0x7ffe5aaf08d0) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1015
#49 0x00007fdb260a73e5 in QCoreApplication::sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../../../frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.h:227
#50 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x2351b20, event=event@entry=0x7ffe5aaf08d0, alienWidget=alienWidget@entry=0x2351b20, nativeWidget=0x1f4f320, buttonDown=buttonDown@entry=0x7fdb2657fb20 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:2769
#51 0x00007fdb260fdad1 in QWidgetWindow::handleMouseEvent (this=this@entry=0x20eb180, event=event@entry=0x7ffe5aaf0cd0) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qwidgetwindow.cpp:554
#52 0x00007fdb260ffe4b in QWidgetWindow::event (this=0x20eb180, event=0x7ffe5aaf0cd0) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qwidgetwindow.cpp:210
#53 0x00007fdb260a2f4c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x20eb180, e=0x7ffe5aaf0cd0) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3714
#54 0x00007fdb260a7e06 in QApplication::notify (this=0x7ffe5aaf15e0, receiver=0x20eb180, e=0x7ffe5aaf0cd0) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3495
#55 0x00007fdb2520afa8 in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x20eb180, event=event@entry=0x7ffe5aaf0cd0) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1015
#56 0x00007fdb25a77420 in QCoreApplication::sendSpontaneousEvent (event=0x7ffe5aaf0cd0, receiver=0x20eb180) at ../../include/QtCore/../../../../frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.h:230
#57 QGuiApplicationPrivate::processMouseEvent (e=0x2a4b420) at /home/kde-devel/frameworks/qt5/qtbase/src/gui/kernel/qguiapplication.cpp:1868
#58 0x00007fdb25a78e65 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x2a4b420) at /home/kde-devel/frameworks/qt5/qtbase/src/gui/kernel/qguiapplication.cpp:1652
#59 0x00007fdb25a578ab in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at /home/kde-devel/frameworks/qt5/qtbase/src/gui/kernel/qwindowsysteminterface.cpp:645
#60 0x00007fdb16b664d0 in userEventSourceDispatch (source=<optimized out>) at /home/kde-devel/frameworks/qt5/qtbase/src/platformsupport/eventdispatchers/qeventdispatcher_glib.cpp:70
#61 0x00007fdb1cdeadc7 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#62 0x00007fdb1cdeb020 in ?? () from /usr/lib/libglib-2.0.so.0
#63 0x00007fdb1cdeb0cc in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#64 0x00007fdb2525d47f in QEventDispatcherGlib::processEvents (this=0x1eb7a80, flags=...) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:417
#65 0x00007fdb252092aa in QEventLoop::exec (this=this@entry=0x7ffe5aaf1050, flags=..., flags@entry=...) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qeventloop.cpp:204
#66 0x00007fdb2521135d in QCoreApplication::exec () at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1285
#67 0x00007fdb2bde1e69 in kdemain (argc=2, argv=0x7ffe5aaf1718) at /home/kde-devel/frameworks/dolphin/src/main.cpp:150
#68 0x0000000000400bb2 in main (argc=2, argv=0x7ffe5aaf1718) at src/dolphin_dummy.cpp:3

Possible duplicates by query: bug 354472.

Reported using DrKonqi
Comment 1 Emmanuel Pescosta 2016-03-06 19:07:13 UTC
Thanks for the bug report.

Should be index+1 instead of index-1 in
if (m_cells.size() < index - 1)
        m_cells.resize(childCount());
QAccessibleInterface* child = m_cells.at(index);
Comment 2 Emmanuel Pescosta 2016-04-09 12:06:07 UTC
*** Bug 361535 has been marked as a duplicate of this bug. ***
Comment 3 Emmanuel Pescosta 2016-04-09 12:09:39 UTC
Git commit 5d6b5d882f5d2c8c26d30ac513ec6c35764c0e9d by Emmanuel Pescosta.
Committed on 09/04/2016 at 12:08.
Pushed by emmanuelp into branch 'Applications/16.04'.

Fix crash caused by a out-of-bounds access in KItemListViewAccessible::cell
FIXED-IN: 16.04.0
REVIEW: 127397

M  +3    -1    src/kitemviews/kitemlistviewaccessible.cpp

http://commits.kde.org/dolphin/5d6b5d882f5d2c8c26d30ac513ec6c35764c0e9d
Comment 4 Łukasz Żarnowiecki 2016-04-09 12:11:13 UTC
--- dolphin-15.12.3/src/kitemviews/kitemlistviewaccessible.cpp.old	2016-04-09 01:01:52.836017471 +0200
+++ dolphin-15.12.3/src/kitemviews/kitemlistviewaccessible.cpp	2016-04-09 01:19:10.477028173 +0200
Works like a charm

@@ -73,7 +73,7 @@
         return 0;
     }
 
-    if (m_cells.size() < index - 1)
+    if (m_cells.size() < index + 1)
         m_cells.resize(childCount());
 
     QAccessibleInterface* child = m_cells.at(index);
Comment 5 Elvis Angelaccio 2017-01-19 14:01:11 UTC
*** Bug 363982 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2018-08-22 21:24:57 UTC
*** Bug 386712 has been marked as a duplicate of this bug. ***
Comment 7 vvs170 2023-05-19 18:02:49 UTC
Created attachment 159116 [details]
New crash information added by DrKonqi

dolphin (23.04.1) using Qt 5.15.9

Dolphin crashes when navigating with hotkeys

-- Backtrace (Reduced):
#6  0x00007f9d60eadc5e in __GI___libc_free (mem=0xa) at malloc.c:3344
#7  0x00007f9d61697374 in QVarLengthArray<char, 256>::~QVarLengthArray (this=<optimized out>, this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qvarlengtharray.h:94
[...]
#9  0x00007f9d625bfe7f in QAccessibleWidget::addControllingSignal (this=0x563628c1aaa0, signal=...) at accessible/qaccessiblewidget.cpp:284
#10 0x00007f9d625cce10 in QAccessibleButton::QAccessibleButton (this=<optimized out>, w=<optimized out>, this=<optimized out>, w=<optimized out>) at accessible/simplewidgets.cpp:125
#11 0x00007f9d625c529a in qAccessibleFactory (classname=..., object=0x56361da2b300) at accessible/qaccessiblewidgetfactory.cpp:117