Fix crash caused by a out-of-bounds access in KItemListViewAccessible::cell

BUG: 359738
FIXED-IN: 16.04.0
REVIEW: 127397